[package]
name = "momento_wrapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "momento_wrapper"

[[bin]]
name = "momento_wrapper_hello"
path = "src/bin/hello.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
momento = "0.42.0"
tokio = { version = "1.37.0" , features = ["full"] }
